syntax = "proto3";

package proto;
option go_package = "./;proto";

import "MapMarkPoint.proto";

message MarkMapReq {
  Operation op = 15;
  MapMarkPoint old = 10;
  MapMarkPoint mark = 4;
  enum Operation {
    OPERATION_ADD = 0;
    OPERATION_MOD = 1;
    OPERATION_DEL = 2;
    OPERATION_GET = 3;
  }
}
